# overtone

./: .gitignore  Cargo.toml  README.md  _factbase  icon.svg.import  project.godot
crates/cables-core/: Cargo.toml  README.md
crates/cables-core/examples/: attempt2.rs  sine.rs
crates/cables-core/src/: graph.rs  lib.rs  old.rs
crates/cables-macro/: Cargo.toml
crates/cables-macro/src/: lib.rs
crates/cables-macro/tests/: byref.rs  monadic.rs  music.rs  nodes.rs
crates/lilv/: Cargo.toml  README.md  build.rs
crates/lilv/src/: lib.rs
crates/lilv/src-c/: main.c
crates/music-std/: Cargo.toml  README.md
crates/music-std/examples/: cpal_echo.rs  cpal_output.rs
crates/music-std/src/: examples.rs  exporters.rs  formats.rs  lib.rs  renderers.rs
crates/music-std/src/formats/: mod.rs  pcm.rs
crates/music-std/src/formats/mus/: mod.rs  musi.rs  musx.rs
crates/music-std/src/formats/music/: mod.rs
crates/music-std/src/formats/timbre/: mod.rs
crates/music-std/tests/: .gitignore  soundfont.sft  timbre_soundfonts.rs
crates/overtone-test-editor/: Cargo.toml
crates/resource-projects/: Cargo.toml  LICENSE  README.md
crates/resource-projects/examples/: local.rs
crates/resource-projects/src/: lib.rs  local.rs
crates/resource-projects/src/editor/: mod.rs
crates/resource-projects/src/project/: mod.rs
crates/resource-projects/src/resource/: mod.rs
crates/tiny-graph/: Cargo.toml  README.md
crates/tiny-graph/src/: graph.rs  lib.rs  main.rs
docs/: .gitignore  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/src/: index.md
docs/src/guides/: getting_started.md  index.md
docs/src/license/: index.md
docs/src/reference/: index.md
examples/: hello_world.rs  test_export.txt
examples/Untitled Project/: Overtone.toml
examples/Untitled Project/exports/: test-export.txt
examples/new_project/: .gitignore  main.rs
examples/nodes/: main.rs
examples/production_graph/: audio.rs  main.rs
examples/simple_project/: main.rs
examples/test_project/: Overtone.toml
prototype/: Flat.tres  Lora-VariableFont_wght.ttf.import  Main.tscn  NotoSansMath-Regular.ttf.import
src/: arrangement.rs  errors.rs  info.rs  lib.rs  main.rs  plugin.rs  project.rs  task.rs  types.rs  utils.rs
src/api/: editor.rs  errors.rs  mod.rs
src/arrangement/: dependency.rs  errors.rs  mod.rs  serialization.rs
src/contributions/: mod.rs
src/editor/: errors.rs  mod.rs
src/errors/: mod.rs
src/plugin/: dependency.rs  errors.rs  mod.rs  serialization.rs
src/prelude/: mod.rs
src/project/: errors.rs  mod.rs  serialization.rs
src/project/arrangement/: errors.rs  (+4 more)
src/renderer/: mod.rs  render_exporter.rs  render_format.rs  render_result.rs
src/resource/: mod.rs
src/serialization/: arrangement.rs  dependency.rs  mod.rs  plugin.rs  project.rs
src/task/: mod.rs
src/transformer/: mod.rs
src/utils/: containers.rs  mod.rs  types.rs
wiki/: Idea Dump.md  Overtone.md
wiki/.obsidian/: appearance.json  workspace.json
wiki/Concepts/: Arrangement.md
(+41 files in other folders)
