[package]
name = "overtone"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
description = "An API for creation and management of rich (as in rich-text) musical-ish projects."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/mrpedrobraga/overtone"
categories = ["data-structures"]
keywords = ["overtone", "music", "daw", "composition"]

[lib]
crate-type = ["dylib", "rlib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[dependencies]
libloading = "0.8.1"
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"
uid = "0.1.7"
