[package]
name = "overtone"
version = "0.1.1"
edition = "2021"
rust-version = "1.74.0"
description = "An API for creation and management of rich musical projects."
readme = "README.md"
license = "MIT"
repository = "https://github.com/mrpedrobraga/overtone"
categories = ["data-structures"]
keywords = ["overtone", "music", "daw", "composition"]

[lib]
crate-type = ["dylib", "rlib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[dependencies]
futures-signals = "0.3.33"
libloading = "0.8.1"
maplit = "1.0.2"
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"
