[package]
name = "overtone-music-std"
version = "0.0.0"
edition = "2024"
authors = ["Pedro Braga"]

[dependencies]
overtone = { path = "../.." }
hound = { version = "3.5.1" }
serde = { version = "1.0.228" }
rand = "*"

[dev-dependencies]
serde_json = "1.0.145"
lv2-host-minimal = "0.1.4"
pot = "3.0.1"

[lib]
crate-type = ["dylib", "rlib"]
