[package]
name = "overtone-music-std"
version = "0.0.0"
edition = "2024"
authors = ["Pedro Braga"]

[dependencies]
overtone = { path = "../.." }
hound = { version = "3.5.1" }
serde = { version = "1.0.228", features = ["rc"] }
rand = "*"

[dev-dependencies]
cpal = "0.16.0"
anyhow = "1.0.100"
pot = "*"

[lib]
crate-type = ["dylib", "rlib"]
