[package]
name = "resource-projects"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = [ "dep:serde" ]

[dependencies]
ulid = { version = "1.2.1", features = ["serde"] }
arcstr = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
